--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,3 +1,8 @@
+header{
+    grid-area: header;
+    background: silver;
+}
+
 .header{
     display: flex;
     align-items: center;
@@ -19,10 +24,11 @@
 .header__buttons{
     display: flex;
     background: silver;
-    width: 100%;
+    width: 50%;
     padding: 2px;
-
+    
     button{
+        font-family: 'OTTO', Arial, Helvetica, sans-serif;
         border: 0;
         background: transparent;
         width: 60px;
