--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,10 @@
 @import 'base/reset';
+@import 'base/fonts';
 @import 'base/shared';
 @import 'layout/header';
 @import 'layout/main';
 @import 'layout/footer';
 @import 'layout/container';
+@import 'layout/aside';
+
+
